2007-11-12 Borut Razem <borut.razem AT siol.net>

	* as\z80\asmain.c, as\z80\asm.h, as\z80\assym.c, as\z80\asdata.c,
	  as\z80\asout.c, as\z80\aslist.c:
	  fixed bug #1817005 - as-z80 chokes on long labels

2007-11-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/hc08/asmain.c,
	* as/z80/asmain.c: cosmetic changes
	* as/hc08/alloc.h,
	* as/mcs51/alloc.h,
	* as/z80/alloc.h: removed
	* as/hc08/assym.c,
	* as/mcs51/assym.c: replaced alloc.h with stdlib.h
	* as/link/aslink.h: added LKDIRSEP and, LKDIRSEPSTR
	* as/link/hc08/Makefile.in,
	* as/link/mcs51/Makefile.in,
	* as/link/z80/Makefile.in: added -DUNIX to CFLAGS
	* as/link/lklex.c,
	* as/link/mcs51/lkarea.c,
	* as/link/mcs51/lkmain.c: cosmetic changes
	* as/link/hc08/lklibr.c,
	* as/link/z80/lklibr.c,
	* as/link/mcs51/lklibr.c: used LKDIRSEP, LKDIRSEPSTR and LKOBJEXT,
	  used cygwin_conv_to_full_posix_path,
	  added warnings, cosmetic changes, brought more in sync
	  changed old K&R into ANSI function declarations
	* as/link/z80/lklibr.c (loadAdb): added
	* as/link/z80/lkmain.c: removed -- option from usage text

2007-11-03 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (outBitC): optimized for no result

2007-10-31 Borut Razem <borut.razem AT siol.net>

	* src/SDCCsymt.c: fixed (hopeful properly) bug
	  #1805702 - order of extern matters
	* support/regression/tests/bug-1805702.c: enabled regtest for bug
	  #1805702

2007-10-29 Borut Razem <borut.razem AT siol.net>

	* src/SDCCsymt.c: reverted bad fixed of bug #1805702
	  - order of extern matters
	* support/regression/tests/bug-1805702.c: disabled regtest for bug
	  #1805702

2007-10-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/peeph.def: replaced 24bitModeAndPortDS390 by
	  24bitMode, portIsDS390
	* src/mcs51/gen.c (genOr): optimized for RFE 1750727
	* src/SDCCpeeph.c (flat24bitModeAndPortDS390): removed
	  (notVolatileVariable): also check sloc names,
	  (callFuncByName): moved ftab[] out of function and sorted it by use
